# ecommerce

./: Cargo.toml  DEVELOPMENT_WORKFLOW.md  EXTERNAL_TOOL_USAGE.md  INSTALLATION.md  README.md  SPECIFICATION.md  SPECIFICATION_INDEX.md  SPEC_SYNC_INTEGRATION.md  demo-separation.sh
docs/: 01-qualsystems-analysis.md  02-technical-architecture.md  03-development-roadmap.md  README.md
specs/: README.md  user-roles.md
specs/api/: README.md
specs/architecture/: README.md
specs/data-models/: README.md  core.md
specs/modules/: README.md  auth.md  cart.md  products.md  suppliers.md
specs/user-flows/: README.md
src/auth/: mod.rs
